styles.css
* {
  margin: 0;
  padding: 0;
  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
  color: #63032f;
}

body {
  display: flex;
  justify-content: center;
}

.main-container {
  margin-top: 5vh;
  border: solid 7px #63032f;
  padding: 20px;
  border-radius: 20px;
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: #e4e5f9;
}

h1 {
  font-size: 60px;
  margin-bottom: 20px;
}

.score-board {
  display: flex;
  gap: 10px;
  margin-bottom: 30px;
}

.human-score,
.computer-score {
  font-weight: 600;
  border: solid 3px #63032f;
  border-radius: 8px;
  padding: 5px 7px;
  font-size: 30px;
}

.play-text {
  font-size: 35px;
  margin-bottom: 15px;
}

.player-selection {
  display: flex;
  justify-content: center;
  gap: 20px;
  margin-bottom: 30px;
}

.play-btn.active {
  font-size: 60px;
  color: #63032f;
  background-color: white;
  border: solid 3px #63032f;
  border-radius: 8px;
  transition: ease 0.2s;
  cursor: pointer;
  opacity: 1;
  width: 130px;
  aspect-ratio: 1 / 1;
}

.play-btn.active:hover {
  color: white;
  background-color: #63032f;
  transition: ease 0.2s;
}

.play-btn.active:active {
  transform: scale(1.05);
}

.play-btn {
  font-size: 60px;
  color: white;
  background-color: #63032f;
  border: solid 3px #63032f;
  border-radius: 8px;
  opacity: 0.7;
  width: 130px;
  aspect-ratio: 1 / 1;
}

.game-info {
  text-align: center;
  margin-bottom: 15px;
}

.versus {
  font-size: 50px;
  margin-bottom: 15px;
  height: 65px;
  line-height: 40px;
}

.round-result {
  font-size: 30px;
}

.play-again {
  font-size: 25px;
  color: white;
  background-color: #63032f;
  opacity: 0.7;
  border-radius: 8px;
  padding: 9px 20px;
  border: solid 3px #63032f;
}

.play-again.active {
  font-size: 25px;
  color: #63032f;
  background-color: white;
  border-radius: 8px;
  padding: 9px 20px;
  border: solid 3px #63032f;
  transition: ease 0.2s;
  cursor: pointer;
  opacity: 1;
}

.play-again.active:hover {
  color: white;
  background-color: #63032f;
  transition: ease 0.2s;
}

.won,
.lost,
.tie {
  font-size: 30px;
  font-weight: bold;
}

.won {
  color: rgb(0, 147, 0);
}

.lost {
  color: red;
}

.tie {
  color: rgb(45, 80, 235);
}

